--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,113 +1,92 @@
-img {
-    width: 150px;
-    height: 100px;
+.caro{
+    width:100%;
+    height: 500px;
     position: relative;
-    bottom: -105px;
 }
-.navbarcolor{
-    background-color: #26408B;
-    opacity: 0.7;
+
+.overlay{
     position: absolute;
-    top: 8px;
-    left: 8px;
-    z-index: 1;
-    width: 98.6%;
-
+    top: 0;
+    left: 0;
+    z-index: 9999999;
+    width:100%;
+    height: 500px;
+    background-color: rgba(0,0,0,0.7);
+    color: white;
+    text-align: center;
+    padding-top: 125px;
 }
-input {
-    position: relative;
-    left: 850px;
-    bottom: 25px;
-    width: 250px;
-    height: 25px;
+.overlay h1{
+    font-size: 42px;
 }
-hr {
-    bottom: -56px;
+#sub1{
+    font-size: 36px;
+    margin-top: 15px;
 }
-#logo {
-    position: relative;
-    left: -250px;
-    bottom: 0px;
-    width: 95px;
-    height: 60px;
-    
+#sub2{
+    font-size: 36px;
+    margin-top: 25px;
     
 }
-#heroes {
-    position: relative;
-    left: 505px;
-    bottom: -400px;
-}
-#prr {
-position: relative;
-left: 945px;
-bottom: -151px;
-}
-#gote {
-position: relative;
-left: 35px;
-bottom: 99px;
-}
-.stcaption {
-    position: relative;
-    left: 505px;
-}
-#gtitle {
-position: relative;
-font-family: optima;
-bottom: 115px;
-left: 40px;
-color: #1193DD;
-text-decoration-line: underline;
-}
-#gfont {
-position: relative;
-font-family: optima;
-left: 85px;
-bottom: 135px;
-}
-#stitle {
-    position: relative;
-    font-family: optima;
-    bottom: -385px;
-    left: 50px;
-    color: #1193DD;
-text-decoration-line: underline;
-}
-#sfont {
-    position: relative;
-    font-family: optima;
-    left: 50px;
-    bottom: -365px;
 
+#sub3{
+    font-size: 36px;
+    
 }
-#ptitle {
-    position: relative;
-    font-family: optima;
-    bottom: -135px;
-    left: 940px;
-    color: #1193DD;
-text-decoration-line: underline;
+
+
+.slide{
+    width:100%;
+    height: 500px;
+    overflow: hidden;
 }
-#pfont {
-    position: relative;
-    font-family: optima;
-    left: 995px;
-    bottom: -115px;
+
+.slide img{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
 }
-#premium {
-    font-family: optima;
-    color: rgb(205, 58, 58);
-    position: relative;
-    left: 450px;
-    bottom: 10px; 
-    text-decoration-line: underline;  
+
+::ng-deep .carousel-indicators{
+    z-index: 999999999999 !important;
 }
-#categories {
-    font-family: optima;
-    color: green;
-    position: relative;
-    left: 250px;
-    bottom: -10px; 
-    text-decoration-line: underline;  
+
+::ng-deep .carousel-control-next
+{
+    z-index: 999999999999 !important;
+}
+
+::ng-deep .carousel-control-prev
+{
+    z-index: 999999999999 !important;
+}
+::ng-deep .carousel-control-prev-icon{
+    cursor: pointer;
+}
+
+::ng-deep .carousel-control-next-icon{
+    cursor: pointer;
+}
+
+::ng-deep .carousel-indicators li{
+    cursor: pointer;
+}
+
+.pic-container{
+    cursor: pointer;
+    width: 100%;
+    overflow: hidden;
+    height: 250px;
+    margin-top: 30px;
+    border-radius: 5px;
+}
+
+.pic-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#body{
+    padding-bottom: 100px;
 }
